syntax = "proto3";

package brewing;

option go_package = './generated';

service BrewingService {
    rpc StartCooking(StartCookingRequest) returns (StartCookingResponse);
    rpc GetCookingStatus(GetCookingStatusRequest) returns (GetCookingStatusResponse);
}

message Ingredient {
    string uuid = 1;
    string name = 2;
    int32 quantity = 3;
}

message Recipe {
    string uuid = 1;
    string name = 2;
    int32 brew_time_seconds = 3;
    repeated Ingredient ingredients = 4;
}

message Witch {
    string uuid = 1;
    string name = 2;
}

message StartCookingRequest {
    string recipe_uuid = 1;
    string witch_uuid = 2;
    int32 brew_time_seconds = 3;
}

message StartCookingResponse {
    string recipe_uuid = 1;
    string recipe_name = 2;
    repeated Ingredient ingredients = 3;
    string witch_uuid = 4;
    string witch_name = 5;
    string status = 6;
}

message GetCookingStatusRequest {
    string recipe_uuid = 1;
}

message GetCookingStatusResponse {
    enum Status {
        UNKNOWN = 0;
        IN_PROGRESS = 1;
        COMPLETED = 2;
    }
    Status status = 1;
}